After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 711214 - androidmedia: fix rank for more software decoders
androidmedia: fix rank for more software decoders
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other All
: Normal normal
: 1.2.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-31 14:41 UTC by Andoni Morales
Modified: 2013-10-31 15:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
androidmedia: fix rank for more software decoders (1.19 KB, patch)
2013-10-31 14:41 UTC, Andoni Morales
committed Details | Review

Description Andoni Morales 2013-10-31 14:41:00 UTC
In Galaxy S4 the codecs list contains some OMX.SEC.foo.sw.dec
as software decoders
Comment 1 Andoni Morales 2013-10-31 14:41:05 UTC
Created attachment 258652 [details] [review]
androidmedia: fix rank for more software decoders
Comment 2 Sebastian Dröge (slomo) 2013-10-31 14:45:09 UTC
Comment on attachment 258652 [details] [review]
androidmedia: fix rank for more software decoders

Please push and backport to 1.2 :)
Comment 3 Andoni Morales 2013-10-31 15:40:54 UTC
commit 9593ae52983f464ad5d7434ded6ac60934defd8a
Author: Andoni Morales Alastruey <ylatuya@gmail.com>
Date:   Wed Oct 30 18:25:50 2013 +0100

    androidmedia: fix rank for more software decoders
    
    In Galaxy S4 the codecs list contains some OMX.SEC.foo.sw.dec
    as software decoders
    
    https://bugzilla.gnome.org/show_bug.cgi?id=711214